--- a/runtime/plugins/org.jboss.tools.runtime.ui/plugin.xml
+++ b/runtime/plugins/org.jboss.tools.runtime.ui/plugin.xml
@@ -7,19 +7,19 @@
         point="org.eclipse.ui.preferencePages">
      <page
            category="org.jboss.tools.common.model.ui.MainPreferencePage"
-           class="org.jboss.tools.runtime.ui.preferences.RuntimePreferencePage"
+           class="org.jboss.tools.runtime.ui.internal.preferences.RuntimePreferencePage"
            id="org.jboss.tools.runtime.preferences.RuntimePreferencePage"
            name="%JBoss_Runtimes"/>
    </extension>
    <extension
          point="org.eclipse.ui.startup">
       <startup
-            class="org.jboss.tools.runtime.ui.RuntimeScanner"></startup>
+            class="org.jboss.tools.runtime.ui.internal.startup.RuntimeScanner"></startup>
    </extension>
    
    <extension
          point="org.eclipse.core.runtime.preferences">
-      <initializer class="org.jboss.tools.runtime.ui.preferences.JBossRuntimePreferencesInitializer"/>
+      <initializer class="org.jboss.tools.runtime.ui.internal.preferences.JBossRuntimePreferencesInitializer"/>
    </extension>
    
    <extension point="org.eclipse.ui.newWizards">
